--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Моби</title>
+        <title>Моби!</title>
         <link rel="stylesheet" href="main.css">
         <link rel="stylesheet" href="bottom_bar.css">
 
