--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                 <img src="loc-images/pf1.png" alt="">
                                 <img src="loc-images/pf2.png" alt="">
                             </div>
-                            <div class="channel pseudo-active" onclick="new_sliding_overlay('loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков')">
+                            <div class="channel pseudo-active" onclick="open_sliding_overlay('loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков')">
                                 <img src="loc-images/icon.png" alt="">
                                 <p>Pink Floyd – 3,27M</p>
                             </div>
