--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
                         <div class="full">
                             <p class="date">28.04, через 2 дня, в 18:00</p>
                             <div class="slider">
-                                <img src="loc-images/pf1.png" alt="">
-                                <img src="loc-images/pf2.png" alt="">
+                                <img src="/loc-images/pf1.png" alt="">
+                                <img src="/loc-images/pf2.png" alt="">
                             </div>
-                            <div class="channel pseudo-active" onclick="open_sliding_overlay('loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков')">
-                                <img src="loc-images/icon.png" alt="">
+                            <div class="channel pseudo-active" onclick="open_sliding_overlay('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков')">
+                                <img src="/loc-images/icon.png" alt="">
                                 <p>Pink Floyd – 3,27M</p>
                             </div>
                             <p class="description">The Wall — одиннадцатый студийный альбом британской прогрессив-рок-группы Pink Floyd. Был выпущен 30 ноября 1979 года на двух дисках. Это последний релиз группы, записанный в классическом составе: Дэвид Гилмор, Роджер Уотерс, Ник Мейсон и Ричард Райт. В поддержку альбома был организован помпезный гастрольный тур  со сложными театрализованными постановками.</p>
