--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <img src="/loc-images/pf1.png" alt="">
                                 <img src="/loc-images/pf2.png" alt="">
                             </div>
-                            <div class="channel" onclick="open_sliding_overlay('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков', ['описание', 'мероприятия'], 'Группа была основана в 1965 году однокурсниками по архитектурному факультету Лондонского политехнического института Ричардом Райтом, Роджером Уотерсом, Ником Мейсоном (ударные) и их другом из Кембриджа Сидом Барреттом (вокал, гитара). Первоначальное название «The Pink Floyd Sound» было придумано лидером группы и автором большинства текстов раннего периода — Барреттом.')">
+                            <div class="channel" onclick="open_sliding_overlay('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков', ['описание', 'мероприятия'], '<p>Группа была основана в 1965 году однокурсниками по архитектурному факультету Лондонского политехнического института Ричардом Райтом, Роджером Уотерсом, Ником Мейсоном (ударные) и их другом из Кембриджа Сидом Барреттом (вокал, гитара). Первоначальное название «The Pink Floyd Sound» было придумано лидером группы и автором большинства текстов раннего периода — Барреттом.</p>')">
                                 <img src="/loc-images/logo.png" alt="">
                                 <p>Pink Floyd – 3,27M</p>
                             </div>
@@ -68,7 +68,7 @@
                     <p></p>
                 </div>
                 <div class="tab-content">
-                    <p></p>
+
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                     <p></p>
                 </div>
                 <div class="tab-content">
-                    <p></p>
+
                 </div>
             </div>
         </div>
