--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
                 <div class="sliding-tabs">
                     <p class="active"></p>
-                    <p></p>
+                    <p onclick="switch_sliding_overlay_tab('<p>BAN BLYAT</p>')"></p>
                 </div>
                 <div class="tab-content">
 
