--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                 <img src="/loc-images/pf1.png" alt="">
                                 <img src="/loc-images/pf2.png" alt="">
                             </div>
-                            <div class="channel" onclick="open_sliding_overlay('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков', ['описание', 'мероприятия'], '<p>Группа была основана в 1965 году однокурсниками по архитектурному факультету Лондонского политехнического института Ричардом Райтом, Роджером Уотерсом, Ником Мейсоном (ударные) и их другом из Кембриджа Сидом Барреттом (вокал, гитара). Первоначальное название «The Pink Floyd Sound» было придумано лидером группы и автором большинства текстов раннего периода — Барреттом.</p>')">
+                            <div class="channel" onclick="open_sliding_overlay('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков', ['Описание', 'Мероприятия'], 'Группа была основана в 1965 году однокурсниками по архитектурному факультету Лондонского политехнического института Ричардом Райтом, Роджером Уотерсом, Ником Мейсоном (ударные) и их другом из Кембриджа Сидом Барреттом (вокал, гитара). Первоначальное название «The Pink Floyd Sound» было придумано лидером группы и автором большинства текстов раннего периода — Барреттом.')">
                                 <img src="/loc-images/logo.png" alt="">
                                 <p>Pink Floyd – 3,27M</p>
                             </div>
@@ -63,15 +63,23 @@
                     <h3></h3>
                     <p></p>
                 </div>
-                <div class="sliding-tabs">
-                    <p class="active"></p>
-                    <p onclick="switch_sliding_overlay_tab('<p>BAN BLYAT</p>')"></p>
-                </div>
                 <div class="tab-content">
-
+                    <h4></h4>
+                    <p></p>
+                    <h4></h4>
+                    <div class="cards">
+                        <div class="card">
+                            <img src="/loc-images/themoon.png" alt="">
+                        </div>
+                        <div class="card">
+                            <img src="/loc-images/thewall.png" alt="">
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <!-- Cringanul -->
 
         <div class="sliding-overlay">
             <div class="sliding-overlay-wrapper">
@@ -81,15 +89,15 @@
                     <h3></h3>
                     <p></p>
                 </div>
-                <div class="sliding-tabs">
-                    <p class="active"></p>
-                    <p></p>
-                </div>
                 <div class="tab-content">
-
+                    <h4></h4>
+                    <p></p>
+                    <h4></h4>
+                    <div class="cards"></div>
                 </div>
             </div>
         </div>
+
         <script src="main.js" defer></script>
         <script src="bottom_bar.js" defer></script>
         <script src="bottom_popup.js" defer></script>
