--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="jumbo_button.css">
         <link rel="stylesheet" href="bottom_popup.css">
 
+        <link rel="stylesheet" href="profile.css">
         <link rel="stylesheet" href="sliding_overlay.css">
 
         <link rel="preconnect" href="//api-maps.yandex.ru">
@@ -18,12 +19,10 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
     </head>
     <body>
-        <div id="modular-content">
-
-        </div>
+        <div id="modular-content"></div>
 
         <div id="bottom-bar">
-            <div id="familiar"><p>􀉬</p></div>
+            <div id="future"><p>􀉬</p></div>
             <div id="map" class="chosen"><p>􀙋</p></div>
             <div id="profile"><p>􀉪</p></div>
         </div>
@@ -31,8 +30,6 @@
         <script src="main.js"></script>
         <script src="bottom_bar.js" defer></script>
 
-        <script>
-            load_module("/map.html")
-        </script>
+        <script>load_module("/map.html")</script>
     </body>
 </html>
