--- a/profile.html
+++ b/profile.html
@@ -5,10 +5,11 @@
         <p></p>
     </div>
     <h4>Профиль</h4>
-    <p></p>
+    <p class="description"></p>
     <h4>Мои мероприятия</h4>
-    <button>Создать новое</button>
+    <button>􀅼 Создать новое</button>
     <div class="cards">
 
     </div>
 </div>
+profile.js
