--- a/authentication.html
+++ b/authentication.html
@@ -9,6 +9,34 @@
         <meta content="width=device-width, initial-scale=1" name="viewport">
     </head>
     <body>
-
+        <div id="auth-block">
+            <div class="wrapper">
+                <h1>Регистрация</h1>
+                <input type="text" placeholder="Имя пользователя" id="username">
+                <input type="text" placeholder="Пароль" id="password">
+                <input type="text" placeholder="Повторите пароль" id="password_insurance">
+                <textarea type="text" placeholder="Немного о себе" id="description"></textarea>
+                <p id="cringy-message">Уже есть аккаунт? <span onclick="sign_in()">Войти.</span></p>
+                <div id="jumbo-button" style="position: absolute; bottom: 20px; width: 90vw;">
+                    Регистрация
+                </div>
+            </div>
+        </div>
+        <script>
+            function sign_in() {
+                document.querySelector("h1").innerText = "Вход"
+                document.querySelector("#password_insurance").style.display = "none"
+                document.querySelector("#description").style.display = "none"
+                document.querySelector("#cringy-message").innerHTML = "<p>Еще нет аккаунта? <span onclick='sign_up()'>Создать.</span></p>"
+                document.querySelector("#jumbo-button").innerText = "Вход"
+            }
+            function sign_up() {
+                document.querySelector("h1").innerText = "Регистрация"
+                document.querySelector("#password_insurance").style.display = "block"
+                document.querySelector("#description").style.display = "block"
+                document.querySelector("#cringy-message").innerHTML = "<p>Уже есть аккаунт? <span onclick='sign_in()'>Войти.</span></p>"
+                document.querySelector("#jumbo-button").innerText = "Регистрация"
+            }
+        </script>
     </body>
 </html>
