--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
             <img src="/loc-images/pf1.png" alt="">
             <img src="/loc-images/pf2.png" alt="">
           </div>
-          <div class="channel" onclick="open_sliding_overlay_v1('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков', 'Группа была основана в 1965 году однокурсниками по архитектурному факультету Лондонского политехнического института Ричардом Райтом, Роджером Уотерсом, Ником Мейсоном (ударные) и их другом из Кембриджа Сидом Барреттом (вокал, гитара). Первоначальное название «The Pink Floyd Sound» было придумано лидером группы и автором большинства текстов раннего периода — Барреттом.')">
+          <div class="channel" onclick="open_sliding_overlay_v1('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков', 'Группа была основана в 1965 году однокурсниками по архитектурному факультету Лондонского политехнического института Ричардом Райтом, Роджером Уотерсом, Ником Мейсоном (ударные) и их другом из Кембриджа Сидом Барреттом (вокал, гитара). Первоначальное название «The Pink Floyd Sound» было придумано лидером группы и автором большинства текстов раннего периода — Барреттом.', [], 'channel-info')">
             <img src="/loc-images/logo.png" alt="">
             <p>Pink Floyd – 3,27M</p>
           </div>
@@ -46,7 +46,7 @@
         <div class="card">
           <img src="/loc-images/themoon.png" alt="">
         </div>
-        <div class="card" onclick="open_sliding_overlay_v2('/loc-images/thewall.png', 'The Dark Side of The Moon', '28.04.1980', 'Самый успешный альбом группы, превративший Pink Floyd в явление мирового масштаба. Один из самых продаваемых альбомов в истории звукозаписи — общее число проданных экземпляров превышает 45 миллионов.')">
+        <div class="card" onclick="open_sliding_overlay_v2('/loc-images/thewall.png', 'The Dark Side of The Moon', '28.04.1980', 'Самый успешный альбом группы, превративший Pink Floyd в явление мирового масштаба. Один из самых продаваемых альбомов в истории звукозаписи — общее число проданных экземпляров превышает 45 миллионов.', [], 'event-info')">
           <img src="/loc-images/thewall.png" alt="">
         </div>
       </div>
