--- a/profile.html
+++ b/profile.html
@@ -7,9 +7,54 @@
     <h4>Профиль</h4>
     <p class="description"></p>
     <h4>Мои мероприятия</h4>
-    <button>􀅼 Создать новое</button>
+    <button onclick="open_sliding_overlay_v2('/loc-images/placeholder.png', 'Название мероприятия', '31.12.1990', 'Нажмите, чтобы редактировать описание мероприятия', [], 'new-event')">􀅼 Создать новое</button>
     <div class="cards">
 
     </div>
 </div>
-profile.js
+
+<div class="sliding-overlay" id="new-event">
+    <div class="sliding-overlay-wrapper">
+        <div class="back-button" onclick="close_sliding_overlay(document.getElementById('new-event'))"><p>􀆄</p></div>
+        <div class="cover">
+            <img alt="">
+        </div>
+        <h3 class="heading"></h3>
+        <p class="date"></p>
+        <div class="tab-content">
+            <h4 style="display:none"></h4>
+            <p></p>
+        </div>
+        <div id="jumbo-button">
+            Создать!
+        </div>
+    </div>
+</div>
+
+<div class="sliding-overlay" id="event-info">
+    <div class="sliding-overlay-wrapper">
+        <div class="back-button" onclick="close_sliding_overlay(document.getElementById('event-info'))"><p>􀆄</p></div>
+        <div class="cover">
+            <img src="/loc-images/themoon.png" alt="">
+        </div>
+        <h3 class="heading"></h3>
+        <p class="date"></p>
+        <div class="tab-content">
+            <h4>Описание</h4>
+            <p></p>
+            <h4>Отзывы</h4>
+            <div class="comments">
+                <div class="comment">
+                    <div class="header">
+                        <div>
+                            <img src="/loc-images/sydbarret.png" alt="">
+                        </div>
+                        <p>Сид Баррет</p>
+                    </div>
+                    <p>Звучит, конечно, старомодно...</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+profile.js&sliding_overlay.js
