--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="bottom_popup.css">
 
         <link rel="stylesheet" href="profile.css">
+        <link rel="stylesheet" href="future.css">
         <link rel="stylesheet" href="sliding_overlay.css">
 
         <link rel="preconnect" href="//api-maps.yandex.ru">
