--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
     <p class="description"></p>
     <h4>Мои мероприятия</h4>
     <button onclick="open_sliding_overlay_v2('/loc-images/placeholder.png', 'Название мероприятия', '31.12.1990, 18:00', 'Нажмите, чтобы редактировать описание мероприятия', [], 'new-event')">􀅼 Создать новое</button>
-    <div class="cards">
+    <div id="cards">
 
     </div>
 </div>
@@ -73,4 +73,4 @@
         </div>
     </div>
 </div>
-profile.js&sliding_overlay.js
+select.js&profile.js&sliding_overlay.js
