--- a/map.html
+++ b/map.html
@@ -42,12 +42,18 @@
       <h4>Описание</h4>
       <p></p>
       <h4>Мероприятия</h4>
-      <div class="cards">
+      <div id="cards">
         <div class="card">
           <img src="/loc-images/themoon.png" alt="">
+          <div class="header">
+            <p>The Dark Side of The Moon</p>
+          </div>
         </div>
         <div class="card" onclick="open_sliding_overlay_v2('/loc-images/thewall.png', 'The Dark Side of The Moon', '28.04.1980', 'Самый успешный альбом группы, превративший Pink Floyd в явление мирового масштаба. Один из самых продаваемых альбомов в истории звукозаписи — общее число проданных экземпляров превышает 45 миллионов.', [], 'event-info')">
           <img src="/loc-images/thewall.png" alt="">
+          <div class="header">
+            <p>The Wall</p>
+          </div>
         </div>
       </div>
     </div>
