--- a/authentication.html
+++ b/authentication.html
@@ -22,6 +22,7 @@
                 </div>
             </div>
         </div>
+        <script src="main.js"></script>
         <script>
             function sign_in() {
                 document.querySelector("h1").innerText = "Вход"
@@ -30,12 +31,39 @@
                 document.querySelector("#cringy-message").innerHTML = "<p>Еще нет аккаунта? <span onclick='sign_up()'>Создать.</span></p>"
                 document.querySelector("#jumbo-button").innerText = "Вход"
             }
+
             function sign_up() {
                 document.querySelector("h1").innerText = "Регистрация"
                 document.querySelector("#password_insurance").style.display = "block"
                 document.querySelector("#description").style.display = "block"
                 document.querySelector("#cringy-message").innerHTML = "<p>Уже есть аккаунт? <span onclick='sign_in()'>Войти.</span></p>"
                 document.querySelector("#jumbo-button").innerText = "Регистрация"
+            }
+
+            let action_button = document.getElementById("jumbo-button")
+            let username = document.getElementById("username")
+            let password = document.getElementById("password")
+            let password_insurance = document.getElementById("password_insurance")
+            let description = document.getElementById("description")
+
+            action_button.onclick = () => {
+                if (action_button.innerText === "Войти") {
+                    request_data(`login/${username.value}/${password.value}`, (d) => {
+                        console.log(d)
+                        if (d !== false) {
+                            sessionStorage.setItem("uuid", String(d))
+                            location.href = "index.html"
+                        }
+                    })
+                } else {
+                    request_data(`register/${username.value}/${password.value}/${password_insurance.value}/${description.value}`, (d) => {
+                        console.log(d)
+                        if (d !== false) {
+                            sessionStorage.setItem("uuid", String(d))
+                            location.href = "index.html"
+                        }
+                    })
+                }
             }
         </script>
     </body>
