--- a/future.html
+++ b/future.html
@@ -21,4 +21,21 @@
 
     </div>
 </div>
+<div class="sliding-overlay" id="event-info">
+    <div class="sliding-overlay-wrapper">
+        <div class="back-button" onclick="close_sliding_overlay(document.getElementById('event-info'))"><p>􀆄</p></div>
+        <div class="cover">
+            <img src="/loc-images/themoon.png" alt="">
+        </div>
+        <h3 class="heading"></h3>
+        <p class="date"></p>
+        <div class="tab-content">
+            <h4>Описание</h4>
+            <p></p>
+            <h4>Отзывы</h4>
+            <div class="comments" id="comments">
+            </div>
+        </div>
+    </div>
+</div>
 select.js&future.js
