--- a/profile.html
+++ b/profile.html
@@ -60,18 +60,9 @@
             <h4>Описание</h4>
             <p></p>
             <h4>Отзывы</h4>
-            <div class="comments">
-                <div class="comment">
-                    <div class="header">
-                        <div>
-                            <img src="/loc-images/sydbarret.png" alt="">
-                        </div>
-                        <p>Сид Баррет</p>
-                    </div>
-                    <p>Звучит, конечно, старомодно...</p>
-                </div>
+            <div class="comments" id="comments">
             </div>
         </div>
     </div>
 </div>
-select.js&profile.js&sliding_overlay.js
+select.js&profile.js&sliding_overlay.js&event_cards.js
