--- a/map.html
+++ b/map.html
@@ -49,10 +49,9 @@
             <p>The Dark Side of The Moon</p>
           </div>
         </div>
-        <div class="card" onclick="open_sliding_overlay_v2('/loc-images/thewall.png', 'The Dark Side of The Moon', '28.04.1980', 'Самый успешный альбом группы, превративший Pink Floyd в явление мирового масштаба. Один из самых продаваемых альбомов в истории звукозаписи — общее число проданных экземпляров превышает 45 миллионов.', [], 'event-info')">
+        <div class="card" onclick="">
           <img src="/loc-images/thewall.png" alt="">
           <div class="header">
-
             <p>The Wall</p>
           </div>
         </div>
@@ -73,17 +72,7 @@
       <h4>Описание</h4>
       <p></p>
       <h4>Отзывы</h4>
-      <div class="comments">
-        <div class="comment">
-          <div class="header">
-            <div>
-              <img src="/loc-images/sydbarret.png" alt="">
-            </div>
-            <p>Сид Баррет</p>
-          </div>
-          <p>Звучит, конечно, старомодно...</p>
-        </div>
-      </div>
+      <div class="comments" id="comments"></div>
     </div>
   </div>
 </div>
