--- a/map.html
+++ b/map.html
@@ -1,21 +1,21 @@
 <div id="bottom-popup-wrapper">
   <div id="bottom-popup">
     <div class="popup-wrapper">
-      <h2>Pink Floyd – The Wall</h2>
+      <h2 id="event-name"></h2>
       <div class="frames">
         <div class="preview">
           <p class="date">28.04.1980</p>
           <p class="description">The Wall (с англ. – «Стена») — одиннадцатый студийный альбом британской прогрессив-рок-группы</p>
         </div>
         <div class="full">
-          <p class="date">28.04, через 2 дня, в 18:00</p>
+          <p class="date" id="event-date">28.04, через 2 дня, в 18:00</p>
           <div class="slider">
             <img src="/loc-images/pf1.png" alt="">
             <img src="/loc-images/pf2.png" alt="">
           </div>
           <div class="channel" onclick="open_sliding_overlay_v1('/loc-images/logo.png', 'Pink Floyd', '3,27M подписчиков', 'Группа была основана в 1965 году однокурсниками по архитектурному факультету Лондонского политехнического института Ричардом Райтом, Роджером Уотерсом, Ником Мейсоном (ударные) и их другом из Кембриджа Сидом Барреттом (вокал, гитара). Первоначальное название «The Pink Floyd Sound» было придумано лидером группы и автором большинства текстов раннего периода — Барреттом.', [], 'channel-info')">
             <img src="/loc-images/logo.png" alt="">
-            <p>Pink Floyd – 3,27M</p>
+            <p id="event-channel-rating"></p>
           </div>
           <p class="description">The Wall — одиннадцатый студийный альбом британской прогрессив-рок-группы Pink Floyd. Был выпущен 30 ноября 1979 года на двух дисках. Это последний релиз группы, записанный в классическом составе: Дэвид Гилмор, Роджер Уотерс, Ник Мейсон и Ричард Райт. В поддержку альбома был организован помпезный гастрольный тур  со сложными театрализованными постановками.</p>
           <div id="jumbo-button">
