--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <link rel="dns-prefetch" href="//api-maps.yandex.ru">
 
         <script src="https://api-maps.yandex.ru/2.1/?apikey=40d1649f-0493-4b70-98ba-98533de7710b&lang=ru_RU"></script>
-        <meta content="width=device-width, initial-scale=1" name="viewport">
+<!--        <meta content="width=device-width, initial-scale=1" name="viewport">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     </head>
     <body>
         <div id="modular-content"></div>
