--- a/map.html
+++ b/map.html
@@ -17,7 +17,7 @@
             <img src="/loc-images/logo.png" alt="">
             <p id="event-channel-rating"></p>
           </div>
-          <p class="description">The Wall — одиннадцатый студийный альбом британской прогрессив-рок-группы Pink Floyd. Был выпущен 30 ноября 1979 года на двух дисках. Это последний релиз группы, записанный в классическом составе: Дэвид Гилмор, Роджер Уотерс, Ник Мейсон и Ричард Райт. В поддержку альбома был организован помпезный гастрольный тур  со сложными театрализованными постановками.</p>
+          <p class="description" id="event-description">The Wall — одиннадцатый студийный альбом британской прогрессив-рок-группы Pink Floyd. Был выпущен 30 ноября 1979 года на двух дисках. Это последний релиз группы, записанный в классическом составе: Дэвид Гилмор, Роджер Уотерс, Ник Мейсон и Ричард Райт. В поддержку альбома был организован помпезный гастрольный тур  со сложными театрализованными постановками.</p>
           <div id="jumbo-button">
             <p>Бронировать</p>
           </div>
